# kowalski_loop

./: .gitignore  .gitmodules  AGENT_PROBLEM_PACK_RESULTS.md  DFLASH.md  HEADROOM.md  INSTALL.md  LICENSE  LLM_COMPARISON.md  LOOP.md  MEMORY.md  README.md  SAVINGS.md  llmstack_config.json  pyproject.toml
.local/: release_next.sh
docs/: Fabio_open_code.md  Implementation_details.md  Manjunath_Janardhan_original_articles.md  POWER.md  Raschka_using_local_coding_agents.md  chart_generation_guide.md  evolution-plan.md  kowalski_ascii.txt  manual-phase0-3-test-plan.md  medium_article_01_install.md  medium_article_02_kowalski copy.md  medium_article_02_kowalski.md  medium_article_02_ralph copy.md  medium_article_02_ralph.md  medium_article_03_kowalski_loop.md  medium_article_04_measuring_the_loop.md  medium_article_05_agent_problem_pack.md  plan-kowalskiLoopGeneralization.prompt.md  plot_timings.py  power_monitor_plan.md  power_monitor_tasklist.md
llmstack/: __init__.py  __main__.py  cli.py  config.py
llmstack.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
llmstack/core/: __init__.py  executors.py  gates.py  git_ckpt.py  runlog.py  safety.py  strategy.py  supervisor.py
llmstack/models/: __init__.py  base.py  dflash.py  mlx.py  registry.py  turboquant.py
llmstack/modes/: __init__.py  base.py  continuous_mode.py  plan_mode.py  supervised_mode.py  watch_mode.py
tests/: test_phase2_modes.py  test_phase3_5_loop_strategy.py  test_phase3_init_wizard.py  test_phase3_pluggable_gates.py  test_phase4_active_model_detection.py  test_readme_commands.py
(+30 files in other folders)
